# wuhoop

./: .dockerignore  Makefile  README.md  compose.yaml  pyproject.toml
backend/: .dockerignore  Dockerfile  app.py  pyproject.toml  schemas.py  server.py
backend/alembic/: env.py
backend/alembic/versions/: d48e75bbe6fe_initial_migration_factgameevent_table.py
backend/api/: routes.py
backend/services/: scoreboard.py
backend/tests/: conftest.py  test_app.py  test_database.py  test_schemas.py
backend/tests/data/: boxscore_summary.json  play_by_play.json
backend/tests/unit/: conftest.py
backend/tests/unit/api/: conftest.py  test_middleware.py  test_routes.py
backend/tests/unit/services/: test_scoreboard.py
backend/tests/unit/sources/: test_base.py  test_boxscore_summary.py  test_play_by_play.py  test_scoreboard.py
backend/wuhoop/: constants.py
backend/wuhoop/api/: middleware.py  routes.py
backend/wuhoop/db/: __init__.py  models.py  session.py
backend/wuhoop/services/: scoreboard.py
backend/wuhoop/sources/: __init__.py  base.py  boxscore_summary.py  play_by_play.py  scoreboard.py
backend/wuhoop/sources/schemas/: __init__.py  boxscore_summary.py  common.py  play_by_play.py  scoreboard.py
frontend/: Dockerfile  index.html  nginx.conf  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
skills/commit/: SKILL.md
src/: app.py  constants.py  schemas.py
src/api/: app.py  routes.py  schemas.py
src/services/: __init__.py  scoreboard.py
tests/: conftest.py  test_app.py  test_schemas.py
tests/data/: scoreboard.json
(+1 files in other folders)
